--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   badges: ^3.1.2
   flutter_cart: ^0.0.8
   image_picker: ^1.0.4
+  flutter_chat_ui: ^1.6.9
+  mobile_chat_ui: ^1.0.0
 
 dev_dependencies:
   flutter_test:
