--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   image_picker: ^1.0.4
   flutter_chat_ui: ^1.6.9
   mobile_chat_ui: ^1.0.0
+  syncfusion_flutter_datepicker: ^23.1.42
 
 dev_dependencies:
   flutter_test:
