--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_chat_ui: ^1.6.9
   mobile_chat_ui: ^1.0.0
   syncfusion_flutter_datepicker: ^23.1.42
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
